--- a/src/templates/admin/edithomepage.html
+++ b/src/templates/admin/edithomepage.html
@@ -25,8 +25,7 @@
     </div>
     <p>For text centering, add <code>class="text-center"</code> to the element to be centered.</p>
     <div style="position: relative;">
-        <textarea class="form-control mb-3 md-preview"
-                  id="edithome-textarea"
+        <textarea class="form-control mb-3 md-preview font-mono"
                   name="content"
                   rows="20"
                   placeholder="Content (Markdown not supported)"
