--- a/src/templates/contest/export_problem.html
+++ b/src/templates/contest/export_problem.html
@@ -8,6 +8,7 @@
 	Are you sure you want to export {{ data["name"] }} to the Practice tab?
 </p>
 <form method="post">
+    <input class="form-control mb-3" type="number" name="point_value" placeholder="New Point Value: (Empty to Keep Original)">
     <input class="btn btn-primary" type="submit" value="Confirm">
     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
