--- a/src/templates/admin/users.html
+++ b/src/templates/admin/users.html
@@ -39,18 +39,21 @@
                         <img src="/assets/images/restrict.svg"
                              onerror="this.src='/assets/images/restrict.png'"
                              class="svg-red icon"
+                             alt="Ban/Unban user"
                              title="Ban/Unban user">
                     </a>
                     <a href="#" onclick="resetpass(this)">
                         <img src="/assets/images/key.svg"
                              onerror="this.src='/assets/images/key.png'"
                              class="icon"
+                             alt="Reset password"
                              title="Reset password">
                     </a>
                     <a href="#" onclick="admin(this)">
                         <img src="/assets/images/arrow-up.svg"
                              onerror="this.src='/assets/images/arrow-up.png'"
                              class="svg-green icon"
+                             alt="Grant/Revoke admin"
                              title="Grant/Revoke admin">
                     </a>
                 </td>
