--- a/src/templates/contest/scoreboard.html
+++ b/src/templates/contest/scoreboard.html
@@ -42,7 +42,8 @@
                         <img src="/assets/images/restrict.svg"
                              onerror="this.src='/assets/images/restrict.png'"
                              class="svg-red icon"
-                             title="Disqualify user"></img>
+                             alt="Disqualify user"
+                             title="Disqualify user">
                     </a></td>
                 {% endif %}
             </tr>
