--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -30,6 +30,7 @@
            style="position: absolute; top: 12px; right: 36px;">
             <img src="/assets/images/pencil.svg"
                  onerror="this.src='/assets/images/pencil.png'"
+                 alt="Edit announcement"
                  class="icon">
         </a>
         <a data-id="{{ announcement['id'] }}"
@@ -38,6 +39,7 @@
            style="position: absolute; top: 12px; right: 16px;">
             <img src="/assets/images/trash.svg"
                  onerror="this.src='/assets/images/trash.png'"
+                 alt="Delete announcement"
                  class="icon">
         </a>
         {% endif %}
