--- a/src/templates/problem/problems.html
+++ b/src/templates/problem/problems.html
@@ -39,11 +39,13 @@
                     {% if row["id"] in solved %}
                         <img class="svg-green icon"
                              src="/assets/images/check.svg"
-                             onerror="this.src='/assets/images/check.png'"></img>
+                             alt="Solved"
+                             onerror="this.src='/assets/images/check.png'">
                     {% else %}
                         <img class="svg-red icon"
                              src="/assets/images/times.svg"
-                             onerror="this.src='/assets/images/times.png'"></img>
+                             alt="Solved"
+                             onerror="this.src='/assets/images/times.png'">
                     {% endif %}
                 </td>
                 <td><a href="/problem/{{ row["id"] }}">{{ row["name"] }}</a></td>
