--- a/src/templates/contest/edit.html
+++ b/src/templates/contest/edit.html
@@ -60,7 +60,7 @@
         }
     });
 
-    document.getElementById('description').addEventListener('event', update);
+    document.getElementById("description").addEventListener("input", update);
 
     document.getElementsByTagName("form")[0].onsubmit = function(event) {
         var formStart = this.querySelector("#start");
