--- a/src/templates/admin/console.html
+++ b/src/templates/admin/console.html
@@ -6,7 +6,7 @@
 <h1>Admin Console</h1>
 <div class="row">
     <div class="col-sm-6 admin-card">
-        <div class="card">
+        <div class="card bg-ld-green">
             <div class="card-body">
                 <h5 class="card-title">User Management</h5>
                 <p class="card-text">Manage users and their submissions.</p>
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="col-sm-6 admin-card">
-        <div class="card">
+        <div class="card bg-ld-red">
             <div class="card-body">
                 <h5 class="card-title">Create Announcements & Contests</h5>
                 <p class="card-text">Create and post new announcements and contests.</p>
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="col-sm-6 admin-card">
-        <div class="card">
+        <div class="card bg-ld-purple">
             <div class="card-body">
                 <h5 class="card-title">Manage Problems</h5>
                 <p class="card-text">Create problems and view draft problems.</p>
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="col-sm-6 admin-card">
-        <div class="card">
+        <div class="card bg-ld-blue">
             <div class="card-body">
                 <h5 class="card-title">Manage Homepage</h5>
                 <p class="card-text">Edit and preview your homepage, if enabled in site settings.</p>
