--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -279,3 +279,13 @@ body {
 .dark .form-select {
     background-image: url("data:image/svg+xml,<svg style='filter: invert(100%)' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><path fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/></svg>")
 }
+
+
+#hint-container {
+    display: none;
+    margin-top: 16px;
+}
+
+#editorial-container {
+    display: none;
+}
