--- a/src/templates/problem/problem.html
+++ b/src/templates/problem/problem.html
@@ -2,6 +2,11 @@
 
 {% block title %}{{ data["name"] }}{% endblock %}
 
+{% block preload %}
+<link rel="preload" href="/api/problem/description/{{ request.path.split('/')[2] }}" as="fetch" crossorigin="anonymous">
+<link rel="preload" href="/api/problem/hints/{{ request.path.split('/')[2] }}" as="fetch" crossorigin="anonymous">
+{% endblock %}
+
 {% block main %}
 <h1>{{ data["name"] }}</h1>
 {% if session["admin"] %}
