--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -116,13 +116,14 @@
 /****************** MD LIVE PREVIEW **************************/
 textarea.md-preview {
     min-height: 400px;
-    width: 49%;
+    margin-right: 1%;
+    flex: 1;
 }
 div.md-preview {
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 50%;
+    flex: 1;
+    overflow: hidden;
+    min-width: 0px;
+    height: fit-content;
 }
 
 /****************** MISC DISPLAY FIXES ***********************/
