--- a/src/templates/problem/problemeditorial.html
+++ b/src/templates/problem/problemeditorial.html
@@ -8,7 +8,7 @@
 
 {% block main %}
 <h1><a href="{{ request.path[:-10] }}">{{ data["name"] }}</a> Editorial</h1>
-<div id="editorial"></div>
+<div id="editorial" class="hidden"></div>
 {% endblock %}
 {% block script %}
 <script>
@@ -16,12 +16,13 @@
     fetch("/api/problem/editorial/" + problem_id).then(b => b.text())
         .then(b => {
                 if (b.length > 0) {
-                    document.getElementById("editorial").innerHTML = b;
+                    inject(document.getElementById("editorial"), b, false);
                 } else {
                     document.getElementById("editorial").innerHTML =
                         `This problem does not have an editorial.
-                         <a href="/problem/${problem_id}">Back to problem</a>`
+                         <a href="/problem/${problem_id}">Back to problem</a>`;
                 }
+                document.getElementById("editorial").classList.remove("hidden");
             });
 </script>
 {% endblock %}
