--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -52,7 +52,7 @@
 }
 
 #hint {
-    overflow-x: scroll;
+    overflow-x: auto;
     margin-top: 8px;
 }
 
@@ -72,7 +72,7 @@
 }
 
 #problem-description {
-    overflow-x: scroll;
+    overflow-x: auto;
     position: relative;
 }
 
@@ -122,7 +122,7 @@ textarea.md-preview {
 }
 div.md-preview {
     flex: 1;
-    overflow-x: scroll;
+    overflow-x: auto;
     min-width: 0px;
     height: fit-content;
 }
