--- a/src/templates/problem/create.html
+++ b/src/templates/problem/create.html
@@ -7,7 +7,7 @@
 <form autocomplete="off" method="post" id="create" name="create" enctype=multipart/form-data>
     <input class="form-control mb-3" type="text" id="id" name="id" placeholder="ID" required>
     <input class="form-control mb-3" type="text" id="name" name="name" placeholder="Name" required>
-    <div style="position: relative;">
+    <div style="display: flex;">
         <textarea class="form-control mb-3 md-preview"
                   id="description"
                   name="description"
@@ -16,7 +16,7 @@
                   required></textarea>
         <div id="description-out" class="md-preview"></div>
     </div>
-    <div style="position: relative;">
+    <div style="display: flex;">
         <textarea class="form-control mb-3 md-preview"
                   id="hints"
                   name="hints"
@@ -42,17 +42,17 @@
 {% endblock %}
 {% block script %}
 <script>
-    document.getElementById('description').oninput = function() {
-        var product = converter.makeHtml(this.value);
-        var outputDiv = document.getElementById("description-out");
-        outputDiv.innerHTML = product;
-        document.getElementById("description").style.height = outputDiv.offsetHeight + "px";
+    document.getElementById("description-out").attachShadow({mode: "open"});
+    document.getElementById("hints-out").attachShadow({mode: "open"});
+    document.getElementById("description").oninput = function() {
+        const outputDiv = document.getElementById("description-out");
+        injectEditor(outputDiv, this.value);
+        this.style.height = outputDiv.offsetHeight + "px";
     }
-    document.getElementById('hints').oninput = function() {
-        var product = converter.makeHtml(this.value);
-        var outputDiv = document.getElementById("hints-out");
-        outputDiv.innerHTML = product;
-        document.getElementById("hints").style.height = outputDiv.offsetHeight + "px";
+    document.getElementById("hints").oninput = function() {
+        const outputDiv = document.getElementById("hints-out");
+        injectEditor(outputDiv, this.value);
+        this.style.height = outputDiv.offsetHeight + "px";
     }
 </script>
 {% endblock %}
